--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 pyTelegramBotAPI==4.26.0
-Flask==3.1.0
-psutil==6.1.1
 requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.3.0
+html5lib==1.1
+psutil==6.1.1
+Flask==3.1.0
+python-dateutil==2.9.0.post0
+bs4
