Update requirements.txt with new dependencies
Added additional libraries for functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,27 @@ psutil==6.1.1
 Flask==3.1.0
 python-dateutil==2.9.0.post0
 bs4
+tele
+re
+json
+telebot
+types
+faker
+Faker
+threading
+multiprocessing
+Process
+random
+time
+string
+base64
+user_agent
+pyfiglet
+os
+webbrowser
+colorama
+Fore
+getuseragent
+UserAgent
+generate_user_agent
+
